<resources>
    <string name="app_name">Healthy living</string>
    <string name="register_text">Enter you name</string>
    <string name="username_field_hint">Your name</string>
    <string name="add_name_button_hint">Enter</string>
    <string name="user_age">Age</string>
    <string name="user_weight">Weight</string>
    <string name="user_height">Height</string>
    <string name="user_calories">Calories</string>
    <string name="randomText">Random</string>
    <string name="toastText">Toast</string>
    <string name="countText">Count</string>
    <string name="random_title">Random number between 0 and %1d</string>
    <string name="_0">0</string>
    <string name="next_day_menu">Next day</string>
    <string name="prev_day_menu">Previous day</string>
    <string name="lunch_meal">Lunch meal</string>
    <string name="_1st_snack">1st Snack</string>
    <string name="dinner_meal">Dinner meal</string>
    <string name="_2nd_snack">2nd Snack</string>
    <string name="supper_meal">Supper meal</string>
    <string name="loading">Loading…</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>